Add comprehensive debug logging system
- Create logger module with output channel support
- Add detailed logging to all major components:
  - ClaudeClient: API key detection, requests, responses
  - PythonBlockDetector: block detection results
  - TranslationHoverProvider: hover events, cache hits/misses
  - Extension: activation lifecycle
- Add "Show Logs" command to view output channel
- Include sample Python file with various comment styles
- Update README with debugging instructions

--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
       {
         "command": "doc-translate.clearCache",
         "title": "Doc Translate: Clear Translation Cache"
+      },
+      {
+        "command": "doc-translate.showLogs",
+        "title": "Doc Translate: Show Logs"
       }
     ],
     "configuration": {
