Add rate limit retry logic with exponential backoff
- Created retryHelper.ts with comprehensive retry utilities
  - isRateLimitError(): Detects 429 status and rate limit keywords
  - isRetryableError(): Checks for retryable HTTP status codes
  - withRetry(): Generic retry wrapper with exponential backoff
  - Configurable max retries, initial delay, and backoff multiplier

- Updated all translation providers to use retry logic:
  - anthropicProvider.ts
  - openaiProvider.ts
  - geminiProvider.ts

- Added retry configuration settings to package.json:
  - docTranslate.maxRetries (default: 3)
  - docTranslate.retryInitialDelay (default: 1000ms)

- Retry behavior:
  - Automatically retries on rate limit errors (429)
  - Exponential backoff: delay = initialDelay * (2 ^ attempt)
  - Max delay capped at 60 seconds
  - Detailed logging of retry attempts

--- a/package.json
+++ b/package.json
@@ -92,6 +92,16 @@
           "type": "number",
           "default": 30000,
           "description": "APIリクエストのタイムアウト（ミリ秒）"
+        },
+        "docTranslate.maxRetries": {
+          "type": "number",
+          "default": 3,
+          "description": "Rate limit発生時の最大リトライ回数"
+        },
+        "docTranslate.retryInitialDelay": {
+          "type": "number",
+          "default": 1000,
+          "description": "リトライの初期待機時間（ミリ秒）"
         }
       }
     }
