--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "doc-translate",
   "displayName": "Doc Translate",
   "description": "複数のLLM（Claude, OpenAI, Gemini）を使用してコードのdocstringとコメントを翻訳（Python, JS, TS, Go対応）",
-  "version": "0.5.1",
+  "version": "1.0.0",
   "engines": {
     "vscode": "^1.105.0"
   },
   "categories": [
     "Other"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/eycjur/vscode-extension-doc-translate.git"
+  },
   "activationEvents": [],
   "main": "./out/extension.js",
   "contributes": {
