--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "displayName": "Doc Translate",
   "description": "複数のLLM（Claude, OpenAI, Gemini）を使用してコードのdocstringとコメントを翻訳（Python, JS, TS, Go対応）",
   "version": "1.0.0",
+  "publisher": "m-cube",
   "engines": {
     "vscode": "^1.105.0"
   },
