refactor: Move icon files to img/ directory
- Moved icon-design.png and icon-design.drawio to img/
- Updated icon path in package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "複数のLLM（Claude, OpenAI, Gemini）を使用してコードのdocstringとコメントを翻訳（Python, JS, TS, Go対応）",
   "version": "1.0.0",
   "publisher": "m-cube",
-  "icon": "icon-design.png",
+  "icon": "img/icon-design.png",
   "engines": {
     "vscode": "^1.105.0"
   },
